--- a/src/GUI/SimulatorWindow.glade
+++ b/src/GUI/SimulatorWindow.glade
@@ -327,7 +327,10 @@
               <object class="GtkTextView" id="output_text">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
+                <property name="editable">False</property>
+                <property name="left-margin">10</property>
                 <property name="buffer">text_buffer</property>
+                <property name="overwrite">True</property>
                 <property name="input-purpose">terminal</property>
               </object>
             </child>
