--- a/src/GUI/StatisticsWindow.glade
+++ b/src/GUI/StatisticsWindow.glade
@@ -368,11 +368,15 @@
                 <property name="can-focus">True</property>
                 <property name="shadow-type">in</property>
                 <child>
-                  <object class="GtkViewport" id="mainbox">
+                  <object class="GtkViewport">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
                     <child>
-                      <placeholder/>
+                      <object class="GtkImage" id="image">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <property name="stock">gtk-missing-image</property>
+                      </object>
                     </child>
                   </object>
                 </child>
